--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,5 @@
     "--max-line-length=130",
     "--disable=trailing-whitespace,bad-continuation,superfluous-parens,too-few-public-methods,too-many-instance-attributes,too-many-function-args"
     ],
-    "python.pythonPath": ".venv\\Scripts\\python.exe"
+    "python.pythonPath": "D:\\Program Files\\Python38\\python.exe"
 }
