--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,3 @@
 {
-    "python.linting.pylintArgs": [
-    "--extension-pkg-whitelist=pygame", 
-    "--argument-naming-style=PascalCase",
-    "--attr-naming-style=PascalCase",
-    "--class-naming-style=PascalCase",
-    "--class-attribute-naming-style=PascalCase",
-    "--const-naming-style=PascalCase",
-    "--function-naming-style=PascalCase",
-    "--inlinevar-naming-style=PascalCase",
-    "--method-naming-style=PascalCase",
-    "--module-naming-style=PascalCase",
-    "--variable-naming-style=PascalCase",
-    "--good-names=X,Y,i,j,k,ex,Run,_,cls,self",
-    "--max-line-length=130",
-    "--disable=trailing-whitespace,bad-continuation,superfluous-parens,too-few-public-methods,too-many-instance-attributes,too-many-function-args"
-    ],
-    "python.pythonPath": "D:\\Program Files\\Python38\\python.exe"
+    "python.languageServer": "Pylance"
 }
